fixing z-index bug with toast and cart backdrop

--- a/src/scss/_toast.scss
+++ b/src/scss/_toast.scss
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 30;
+  z-index: 110;
   transition: all 0.3s;
   animation: toast 0.5s ease;
 
